--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -15,7 +15,7 @@ jobs:
       uses: anothrNick/github-tag-action@1.26.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        WITH_V: true
+        WITH_V: false
         RELEASE_BRANCHES: develop
         DEFAULT_BUMP: patch
         DRY_RUN: true
